--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "93bcb835-6d71-4ada-86d3-c410ed672410"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
